# wq-agent-public

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ai-review.yml  ci.yml  release.yml
docs/: OPEN_SOURCE_PROCESS.md
scripts/: open_source_preflight.py  zhipu_pr_review.py
src/wq_agent/: cli.py  config.py  db.py  submitter.py  tui.py
tests/: test_cli_init.py  test_correlation.py  test_evaluator.py  test_fast_expr.py  test_gui.py  test_openai_provider.py  test_refine.py  test_regressions.py  test_submitter.py  test_tui.py  test_wrapper_diversity.py
tests/wiki/: conftest.py  test_auto_record.py  test_curator.py  test_eval.py  test_importers.py  test_retrieve_channels.py  test_schema_and_store.py
wiki/: SCHEMA.md  index.md  log.md
wiki/bench/: retrieval_golden.yml
wiki/concepts/: analyst-revisions.md  factor-construction-best-practices.md  liquidity-microstructure.md  low-volatility-anomaly.md  model-factor-libraries.md  momentum-reversal-pv.md  momentum.md  news-sentiment-events.md  option-implied-signals.md  quality-factors.md  value-factors.md
wiki/datasets/: analyst4.md  fundamental2.md  fundamental6.md  model16.md  model51.md  model77.md  news12.md  news18.md  option8.md  option9.md  pv1.md  pv13.md  sentiment1.md  socialmedia12.md  socialmedia8.md  univ1.md
wiki/dictionary/: base.txt  synonyms.yaml
wiki/fields/: adv20.md  anl4_afv4_eps_mean.md  assets.md  cashflow_op.md  close.md  debt.md  enterprise_value.md  eps.md  returns.md  volume.md  vwap.md
wiki/operators/: abs.md  add.md  and.md  bucket.md  days_from_last_change.md  densify.md  divide.md  equal.md  greater.md  greater_equal.md  group_backfill.md  group_mean.md  group_neutralize.md  group_rank.md  group_scale.md  group_zscore.md  hump.md  if_else.md  inverse.md  is_nan.md  kth_element.md  last_diff_value.md  less.md  less_equal.md  log.md  max.md  min.md  multiply.md  normalize.md  not.md  not_equal.md  or.md  power.md  quantile.md  rank.md  reverse.md  scale.md  sign.md  signed_power.md  sqrt.md  (+26 more)
wiki/papers/: 1990-lo-mackinlay-contrarian-profits.md  1993-fama-french-common-risk-factors.md  1993-jegadeesh-titman-returns-to-buying-winners.md  1997-carhart-mutual-fund-persistence.md  2002-amihud-illiquidity.md  2003-pastor-stambaugh-liquidity-risk.md  2006-ang-hodrick-xing-zhang-cross-section-volatility.md  2008-cooper-gulen-schill-asset-growth.md  2011-baker-bradley-wurgler-benchmarks-low-vol.md  2013-asness-moskowitz-pedersen-value-momentum-everywhere.md  2013-novy-marx-other-side-of-value.md  2014-frazzini-pedersen-betting-against-beta.md  2014-novy-marx-quality-investing.md  2015-fama-french-five-factor.md  2015-hou-xue-zhang-q-factor.md  2016-harvey-liu-zhu-cross-section.md  2017-stambaugh-yuan-mispricing-factors.md  2018-lopez-de-prado-hrp.md  (+11 more)
(+51 files in other folders)
