[project]
name = "wq-agent"
version = "0.1.0"
description = "WorldQuant Alpha Generation & Backtesting Agent Harness"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "wq-agent contributors" },
]
keywords = [
    "alpha-research",
    "backtesting",
    "cli",
    "quant",
    "worldquant",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "textual>=0.86.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0.0",
    "sqlite-vec>=0.1.9",
    "networkx>=3.6",
    "python-louvain>=0.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "build>=1.2.0",
]
local-embed = [
    "fastembed>=0.3.0",
]

[project.scripts]
wq-agent = "wq_agent.cli:app"

[project.urls]
Homepage = "https://github.com/NewAmorend/wq-agent"
Repository = "https://github.com/NewAmorend/wq-agent"
Issues = "https://github.com/NewAmorend/wq-agent/issues"
Changelog = "https://github.com/NewAmorend/wq-agent/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wq_agent"]

[tool.hatch.build.targets.wheel.force-include]
"templates" = "wq_agent/resources/templates"
".env.example" = "wq_agent/resources/.env.example"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
